--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,9 @@ Keras==2.3.1
 Keras-Preprocessing==1.1.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+mkl-fft==1.1.0
+mkl-random==1.1.1
+mkl-service==2.3.0
 nbformat==5.0.7
 oauthlib==3.1.0
 opt-einsum==3.1.0
@@ -52,6 +55,10 @@ pyparsing==2.4.7
 pyreadline==2.1
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+pytz==2020.1
+pywin32==227
+PyYAML==5.3.1
+pyzmq==19.0.1
 QDarkStyle==2.8.1
 QtAwesome==0.7.2
 QtPy==1.9.0
