--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,7 @@ entrypoints==0.3
 flake8==3.8.3
 Flask==1.1.2
 future==0.18.2
-gast==0.2.2
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
+gunicorn==20.0.4
 h5py==2.10.0
 imagesize==1.2.0
 itsdangerous==1.1.0
@@ -70,7 +68,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 tensorboard==2.2.1
-tensorflow==2.1.0
+tensorflow==1.15
 tensorflow-estimator==2.1.0
 termcolor==1.1.0
 testpath==0.4.4
