--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ PyYAML==5.3.1
 pyzmq==19.0.1
 requests-oauthlib==1.3.0
 rope==0.17.0
+scikit-learn==0.23.2
 six==1.15.0
 snowballstemmer==2.0.0
 sortedcontainers==2.2.2
